--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/productsdb
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=update
